--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-multi-carousel": "^2.8.2",
     "react-pro-sidebar": "^1.0.0-alpha.7",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
